[package]
name = "mev-inspect"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
# ethers = { version = "0.2.1", features = ["abigen"] }
ethers = "1.0"
ethers-contract = "1.0"
ethers-providers = "1.0"
ethers-middleware = "1.0"
ethers-signers = "1.0"
ethers-core = "1.0"
serde_json = "1.0.61"
once_cell = "1.5.2"
itertools = "0.10.0"
anyhow = "1.0.37"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }

# cached provider
thiserror = "1.0.23"
async-trait = "0.1.42"
serde = "1.0.118"

# postgres connection
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.0"
rust_decimal = { version = "1.10.0", features = ["db-postgres", "db-tokio-postgres"] }
gumdrop = "0.8.0"
futures = "0.3.8"
hex = "0.4.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[features]
postgres-tests = []
